k8s/webapp-bff-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-bff-deployment
  labels:
    app: webapp-bff
  namespace: thesis
spec:
  # ingressClassName: web-ingress
  replicas: 1
  selector:
    matchLabels:
      app: webapp-bff
  template:
    metadata:
      labels:
        app: webapp-bff
    spec:
      containers:
      - name: webapp.bff
        image: turalhasanov/thesis/webapp-bff:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 5101
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-bff-service
  labels:
    app: webapp-bff
spec:
  selector:
    app: webapp-bff
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5101
  type: LoadBalancer
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: web-ingress
#   namespace: thesis
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/use-regex: 'true'
# spec:
#   rules:
#   - host: modularmonolith.local
#     http:
#       paths:
#       - path: /?(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: web-service
#             port:
#               number: 80
