k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thesis-ingress
  namespace: thesis
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: thesis.local
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
